// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`environment config > should normalize context correctly 1`] = `
{
  "ssr": {
    "browserslist": [
      "node >= 16",
    ],
    "config": {
      "dev": {
        "assetPrefix": "/",
        "client": {
          "host": "",
          "overlay": true,
          "path": "/rsbuild-hmr",
          "port": "",
        },
        "hmr": true,
        "lazyCompilation": undefined,
        "liveReload": true,
        "writeToDisk": false,
      },
      "html": {
        "crossorigin": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "mountId": "root",
        "outputStructure": "flat",
        "scriptLoading": "defer",
        "title": "Rsbuild App",
      },
      "output": {
        "assetPrefix": "/",
        "charset": "ascii",
        "cssModules": {
          "auto": true,
          "exportGlobals": false,
          "exportLocalsConvention": "camelCase",
          "namedExport": false,
        },
        "dataUriLimit": {
          "font": 4096,
          "image": 4096,
          "media": 4096,
          "svg": 4096,
        },
        "distPath": {
          "css": "static/css",
          "font": "static/font",
          "html": "/",
          "image": "static/image",
          "js": "static/js",
          "media": "static/media",
          "root": "dist1/server",
          "svg": "static/svg",
          "wasm": "static/wasm",
        },
        "emitAssets": true,
        "filename": {},
        "filenameHash": true,
        "injectStyles": false,
        "inlineScripts": false,
        "inlineStyles": false,
        "legalComments": "linked",
        "manifest": false,
        "minify": true,
        "polyfill": "usage",
        "sourceMap": {
          "css": false,
          "js": undefined,
        },
        "target": "node",
      },
      "performance": {
        "buildCache": true,
        "chunkSplit": {
          "strategy": "split-by-experience",
        },
        "printFileSize": true,
        "profile": false,
        "removeConsole": false,
        "removeMomentLocale": false,
      },
      "security": {
        "nonce": "",
        "sri": {
          "enable": false,
        },
      },
      "server": {
        "compress": true,
        "host": "0.0.0.0",
        "htmlFallback": "index",
        "open": false,
        "port": 3000,
        "printUrls": true,
        "strictPort": false,
      },
      "source": {
        "alias": {},
        "aliasStrategy": "prefer-tsconfig",
        "decorators": {
          "version": "2022-03",
        },
        "define": {},
        "entry": {},
        "preEntry": [],
      },
      "tools": {
        "cssExtract": {
          "loaderOptions": {},
          "pluginOptions": {
            "ignoreOrder": true,
          },
        },
      },
    },
    "distPath": "<ROOT>/dist1/server",
    "entry": {},
    "htmlPaths": {},
    "index": 0,
    "name": "ssr",
    "tsconfigPath": undefined,
  },
  "web": {
    "browserslist": [
      "chrome >= 87",
      "edge >= 88",
      "firefox >= 78",
      "safari >= 14",
    ],
    "config": {
      "dev": {
        "assetPrefix": "/",
        "client": {
          "host": "",
          "overlay": true,
          "path": "/rsbuild-hmr",
          "port": "",
        },
        "hmr": true,
        "lazyCompilation": undefined,
        "liveReload": true,
        "writeToDisk": false,
      },
      "html": {
        "crossorigin": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "mountId": "root",
        "outputStructure": "flat",
        "scriptLoading": "defer",
        "title": "Rsbuild App",
      },
      "output": {
        "assetPrefix": "/",
        "charset": "ascii",
        "cssModules": {
          "auto": true,
          "exportGlobals": false,
          "exportLocalsConvention": "camelCase",
          "namedExport": false,
        },
        "dataUriLimit": {
          "font": 4096,
          "image": 4096,
          "media": 4096,
          "svg": 4096,
        },
        "distPath": {
          "css": "static/css",
          "font": "static/font",
          "html": "/",
          "image": "static/image",
          "js": "static/js",
          "media": "static/media",
          "root": "dist1",
          "svg": "static/svg",
          "wasm": "static/wasm",
        },
        "emitAssets": true,
        "filename": {},
        "filenameHash": true,
        "injectStyles": false,
        "inlineScripts": false,
        "inlineStyles": false,
        "legalComments": "linked",
        "manifest": false,
        "minify": true,
        "polyfill": "usage",
        "sourceMap": {
          "css": false,
          "js": undefined,
        },
        "target": "web",
      },
      "performance": {
        "buildCache": true,
        "chunkSplit": {
          "strategy": "split-by-experience",
        },
        "printFileSize": true,
        "profile": false,
        "removeConsole": false,
        "removeMomentLocale": false,
      },
      "security": {
        "nonce": "",
        "sri": {
          "enable": false,
        },
      },
      "server": {
        "compress": true,
        "host": "0.0.0.0",
        "htmlFallback": "index",
        "open": false,
        "port": 3000,
        "printUrls": true,
        "strictPort": false,
      },
      "source": {
        "alias": {},
        "aliasStrategy": "prefer-tsconfig",
        "decorators": {
          "version": "2022-03",
        },
        "define": {},
        "entry": {},
        "preEntry": [],
      },
      "tools": {
        "cssExtract": {
          "loaderOptions": {},
          "pluginOptions": {
            "ignoreOrder": true,
          },
        },
      },
    },
    "distPath": "<ROOT>/dist1",
    "entry": {},
    "htmlPaths": {},
    "index": 1,
    "name": "web",
    "tsconfigPath": undefined,
  },
}
`;

exports[`environment config > should normalize environment config correctly 1`] = `
{
  "dev": {
    "assetPrefix": "/",
    "client": {
      "host": "",
      "overlay": true,
      "path": "/rsbuild-hmr",
      "port": "",
    },
    "hmr": true,
    "lazyCompilation": true,
    "liveReload": true,
    "writeToDisk": false,
  },
  "html": {
    "crossorigin": false,
    "inject": "head",
    "meta": {
      "charset": {
        "charset": "UTF-8",
      },
      "viewport": "width=device-width, initial-scale=1.0",
    },
    "mountId": "root",
    "outputStructure": "flat",
    "scriptLoading": "defer",
    "title": "Rsbuild App",
  },
  "output": {
    "assetPrefix": "/",
    "charset": "ascii",
    "cssModules": {
      "auto": true,
      "exportGlobals": false,
      "exportLocalsConvention": "camelCase",
      "namedExport": false,
    },
    "dataUriLimit": {
      "font": 4096,
      "image": 4096,
      "media": 4096,
      "svg": 4096,
    },
    "distPath": {
      "css": "static/css",
      "font": "static/font",
      "html": "/",
      "image": "static/image",
      "js": "static/js",
      "media": "static/media",
      "root": "dist",
      "svg": "static/svg",
      "wasm": "static/wasm",
    },
    "emitAssets": true,
    "filename": {},
    "filenameHash": true,
    "injectStyles": false,
    "inlineScripts": false,
    "inlineStyles": false,
    "legalComments": "linked",
    "manifest": false,
    "minify": true,
    "polyfill": "usage",
    "sourceMap": {
      "css": false,
      "js": undefined,
    },
    "target": "web",
  },
  "performance": {
    "buildCache": true,
    "chunkSplit": {
      "strategy": "split-by-experience",
    },
    "printFileSize": true,
    "profile": false,
    "removeConsole": false,
    "removeMomentLocale": false,
  },
  "security": {
    "nonce": "",
    "sri": {
      "enable": false,
    },
  },
  "server": {
    "compress": true,
    "host": "0.0.0.0",
    "htmlFallback": "index",
    "open": false,
    "port": 3000,
    "printUrls": true,
    "strictPort": false,
  },
  "source": {
    "alias": {
      "@common": "src/common",
    },
    "aliasStrategy": "prefer-tsconfig",
    "decorators": {
      "version": "2022-03",
    },
    "define": {},
    "entry": {
      "index": "src/index.client.js",
    },
    "preEntry": [],
  },
  "tools": {
    "cssExtract": {
      "loaderOptions": {},
      "pluginOptions": {
        "ignoreOrder": true,
      },
    },
  },
}
`;

exports[`environment config > should normalize environment config correctly 2`] = `
{
  "dev": {
    "assetPrefix": "/foo",
    "client": {
      "host": "",
      "overlay": true,
      "path": "/rsbuild-hmr",
      "port": "",
    },
    "hmr": true,
    "lazyCompilation": false,
    "liveReload": true,
    "writeToDisk": false,
  },
  "html": {
    "crossorigin": false,
    "inject": "head",
    "meta": {
      "charset": {
        "charset": "UTF-8",
      },
      "viewport": "width=device-width, initial-scale=1.0",
    },
    "mountId": "root",
    "outputStructure": "flat",
    "scriptLoading": "defer",
    "title": "Rsbuild App",
  },
  "output": {
    "assetPrefix": "/",
    "charset": "ascii",
    "cssModules": {
      "auto": true,
      "exportGlobals": false,
      "exportLocalsConvention": "camelCase",
      "namedExport": false,
    },
    "dataUriLimit": {
      "font": 4096,
      "image": 4096,
      "media": 4096,
      "svg": 4096,
    },
    "distPath": {
      "css": "static/css",
      "font": "static/font",
      "html": "/",
      "image": "static/image",
      "js": "static/js",
      "media": "static/media",
      "root": "dist",
      "svg": "static/svg",
      "wasm": "static/wasm",
    },
    "emitAssets": true,
    "filename": {},
    "filenameHash": true,
    "injectStyles": false,
    "inlineScripts": false,
    "inlineStyles": false,
    "legalComments": "linked",
    "manifest": false,
    "minify": true,
    "polyfill": "usage",
    "sourceMap": {
      "css": false,
      "js": undefined,
    },
    "target": "node",
  },
  "performance": {
    "buildCache": true,
    "chunkSplit": {
      "strategy": "split-by-experience",
    },
    "printFileSize": true,
    "profile": false,
    "removeConsole": false,
    "removeMomentLocale": false,
  },
  "security": {
    "nonce": "",
    "sri": {
      "enable": false,
    },
  },
  "server": {
    "compress": true,
    "host": "0.0.0.0",
    "htmlFallback": "index",
    "open": false,
    "port": 3000,
    "printUrls": true,
    "strictPort": false,
  },
  "source": {
    "alias": {
      "@common": "src/common",
    },
    "aliasStrategy": "prefer-tsconfig",
    "decorators": {
      "version": "2022-03",
    },
    "define": {},
    "entry": {
      "index": "src/index.server.js",
    },
    "preEntry": [],
  },
  "tools": {
    "cssExtract": {
      "loaderOptions": {},
      "pluginOptions": {
        "ignoreOrder": true,
      },
    },
  },
}
`;

exports[`environment config > should print environment config when inspect config 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;

exports[`environment config > should support modify environment config by api.modifyRsbuildConfig 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
        "@common1": "src/common1",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web1": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
        "@common1": "src/common1",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {},
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;

exports[`environment config > should support modify single environment config by api.modifyEnvironmentConfig 1`] = `
{
  "ssr": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.server.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
  "web": {
    "dev": {
      "assetPrefix": "/",
      "client": {
        "host": "",
        "overlay": true,
        "path": "/rsbuild-hmr",
        "port": "",
      },
      "hmr": true,
      "lazyCompilation": undefined,
      "liveReload": true,
      "writeToDisk": false,
    },
    "html": {
      "crossorigin": false,
      "inject": "head",
      "meta": {
        "charset": {
          "charset": "UTF-8",
        },
        "viewport": "width=device-width, initial-scale=1.0",
      },
      "mountId": "root",
      "outputStructure": "flat",
      "scriptLoading": "defer",
      "title": "Rsbuild App",
    },
    "output": {
      "assetPrefix": "/",
      "charset": "ascii",
      "cssModules": {
        "auto": true,
        "exportGlobals": false,
        "exportLocalsConvention": "camelCase",
        "namedExport": false,
      },
      "dataUriLimit": {
        "font": 4096,
        "image": 4096,
        "media": 4096,
        "svg": 4096,
      },
      "distPath": {
        "css": "static/css",
        "font": "static/font",
        "html": "/",
        "image": "static/image",
        "js": "static/js",
        "media": "static/media",
        "root": "dist",
        "svg": "static/svg",
        "wasm": "static/wasm",
      },
      "emitAssets": true,
      "filename": {},
      "filenameHash": true,
      "injectStyles": false,
      "inlineScripts": false,
      "inlineStyles": false,
      "legalComments": "linked",
      "manifest": false,
      "minify": true,
      "polyfill": "usage",
      "sourceMap": {
        "css": false,
        "js": undefined,
      },
      "target": "web",
    },
    "performance": {
      "buildCache": true,
      "chunkSplit": {
        "strategy": "split-by-experience",
      },
      "printFileSize": true,
      "profile": false,
      "removeConsole": false,
      "removeMomentLocale": false,
    },
    "security": {
      "nonce": "",
      "sri": {
        "enable": false,
      },
    },
    "server": {
      "compress": true,
      "host": "0.0.0.0",
      "htmlFallback": "index",
      "open": false,
      "port": 3000,
      "printUrls": true,
      "strictPort": false,
    },
    "source": {
      "alias": {
        "@common": "src/common",
        "@common1": "src/common1",
      },
      "aliasStrategy": "prefer-tsconfig",
      "decorators": {
        "version": "2022-03",
      },
      "define": {},
      "entry": {
        "index": "src/index.client.js",
      },
      "preEntry": [],
    },
    "tools": {
      "cssExtract": {
        "loaderOptions": {},
        "pluginOptions": {
          "ignoreOrder": true,
        },
      },
    },
  },
}
`;
